# conky-manager

./: meson.build
debian/: rules
po/: conky-manager2-de.po
src/: makefile
